--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -27,11 +27,8 @@ jobs:
           node-version: '20'
           cache: 'npm'
       
-      - name: Install dependencies (if any)
-        run: |
-          if [ -f package.json ]; then
-            npm ci || npm install
-          fi
+      - name: Install dependencies
+        run: npm install
       
       - name: Generate index.html
         run: node generate-index.js
@@ -39,7 +36,7 @@ jobs:
       - name: Check for changes
         id: verify-changed-files
         run: |
-          if [ -n "$(git status --porcelain index.html)" ]; then
+          if [ -n "$(git status --porcelain)" ]; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
@@ -50,8 +47,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add index.html
-          git commit -m "Auto-generate index.html from presentation folders" || exit 0
+          git add .
+          git commit -m "Auto-generate files from presentation folders" || exit 0
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
